--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: php
 php:
     - 5.6
 before_script:
-    composer install
-script: phpunit tests/
+    - composer install
+script:
+    - mkdir -p build/logs
+    - phpunit tests/
+after_script:
+    - php bin/coveralls -v
