--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.*",
-        "mockery/mockery": "0.9.1"
+        "mockery/mockery": "0.9.1",
+        "satooshi/php-coveralls": "dev-master"
     },
     "config": {
         "bin-dir": "bin/"
