--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_script:
     - composer install
 script:
     - mkdir -p build/logs
-    - phpunit tests/
+    - phpunit --strict tests/
 after_script:
     - php bin/coveralls -v
