Implemented Boosting Query * Resolves #11 * added build/logs directories * Removed mkdir command in .travis.yml * Moved codeCoverage dir into build/logs
Refactor Element and jsonSerialize
* jsonSerialize now resides on the base Element class only
* Simplified how objects are built in Element
* Unless the getElementName method is overloaded, the element class names are snake cased and used for object keys
* Arranging elements and options can still be done in decendant classes
* Some unpleasant complexity added for the Sort object /from &  size options
     - Sort ought to be a property of the search query, however it is on the same level as the query
     - Introduced external objects and external elements to facilitate this
     - external objects and elements are set on an object, but then fetched by the containing element and adopted
* Fixed some namespacing issues in Exceptions

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
 before_script:
     - composer install
 script:
-    - phpunit --strict tests/
+    - phpunit --strict
 after_script:
     - php bin/coveralls -v
