--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "pimple/pimple": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.*",
